--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
   freezed_annotation: ^3.0.0
   go_router: ^14.8.1
   hancod_theme:
-    path: ./packages/hancod_theme-master
+    path: ./packages/theme
   http: ^1.3.0
   image_picker: ^1.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
   multi_dropdown: ^3.0.1
   path: ^1.9.1
@@ -64,6 +64,9 @@ dev_dependencies:
   riverpod_generator: ^2.6.3
   riverpod_lint: ^2.6.3
   very_good_analysis: ^7.0.0
+
+dependency_overrides:
+  intl: ^0.20.2
 
 flutter:
   uses-material-design: true
